src/test/resources/Parser/SyntaxErrors/IntLiteralTooLarge.front
class A:
    int32 i := 9223372036854775807;